@@ -74,7 +74,7 @@ INSERT INTO config (var_name,var_value,is_visible,need_server_restart) VALUES ('
 INSERT INTO config (var_name,var_value,is_visible,need_server_restart) VALUES ('FirstFreeObjectId','100',0,1);
 INSERT INTO config (var_name,var_value,is_visible,need_server_restart) VALUES ('FixedStatusValue','0',1,1);
 INSERT INTO config (var_name,var_value,is_visible,need_server_restart) VALUES ('HelpDeskLink','none',1,1);
-INSERT INTO config (var_name,var_value,is_visible,need_server_restart) VALUES ('HouseKeepingInterval','3600',1,1);
+INSERT INTO config (var_name,var_value,is_visible,need_server_restart) VALUES ('HousekeeperStartTime','02:00',1,1);
 INSERT INTO config (var_name,var_value,is_visible,need_server_restart) VALUES ('IcmpPingSize','46',1,1);
 INSERT INTO config (var_name,var_value,is_visible,need_server_restart) VALUES ('IcmpPingTimeout','1500',1,1);
 INSERT INTO config (var_name,var_value,is_visible,need_server_restart) VALUES ('InstancePollingInterval','600',1,1);
